# eigen_example

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp
calibration/: calib_version.json
calibration/camera_params/: cam_back_200_extrinsic.json  cam_back_200_intrinsic.json  cam_back_70_extrinsic.json  cam_back_70_intrinsic.json  cam_back_left_100_extrinsic.json  cam_back_left_100_intrinsic.json  cam_back_right_100_extrinsic.json  cam_back_right_100_intrinsic.json  cam_front_120_extrinsic.json  cam_front_120_intrinsic.json  cam_front_200_extrinsic.json  cam_front_200_intrinsic.json  cam_front_30_extrinsic.json  cam_front_30_intrinsic.json  cam_front_left_100_extrinsic.json  cam_front_left_100_intrinsic.json  cam_front_right_100_extrinsic.json  cam_front_right_100_intrinsic.json  cam_left_200_extrinsic.json  cam_left_200_intrinsic.json  cam_right_200_extrinsic.json  cam_right_200_intrinsic.json
calibration/ego_params/: ego_footprint.json  ego_model.json
calibration/gnss_params/: gnss_ego.json
calibration/lidar_params/: front_2_lidar.json  front_lidar.json  lidar_ego.json  lidar_gnss.json  middle_lidar.json
src/: affined.cpp  array.cpp  compensation.cpp  interpolation.cpp  inverse.cpp  matrix.cpp  realusing.cpp  rfu2ego.cpp  test.cpp  transformer.cpp
